@@ -2,30 +2,34 @@ package io.mps.project.image;
 
 import java.io.*;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
-public class ImageService {
+public class ImageIOService {
     private static final String DIRECTORY = "src/main/resources/images";
 
     private List<Image> fullSet;
-    private List<Image> testSet;
+    private List<Image> trainSet;
     private List<Image> validationSet;
+    private List<Image> testSet;
+
 
     public synchronized List<Image> getAllFiles() {
         if (fullSet == null) {
             File directory = new File(DIRECTORY);
-            fullSet = Arrays.stream(directory.listFiles()).map(this::load).toList();
+            fullSet = Arrays.stream(directory.listFiles()).map(this::load).collect(Collectors.toList());
         }
 
         return fullSet;
     }
 
-    public synchronized List<Image> getTestFiles() {
-        if (testSet == null) {
-            testSet = getAllFiles().subList(0, (int) (fullSet.size() * 0.7));
+    public synchronized List<Image> getTrainSet() {
+        if (trainSet == null) {
+            trainSet = getAllFiles().subList(0, (int) (fullSet.size() * 0.7));
         }
 
-        return testSet;
+        return trainSet;
     }
 
     public synchronized List<Image> getValidationSet() {
@@ -34,6 +38,14 @@ public class ImageService {
         }
 
         return validationSet;
+    }
+
+    public synchronized List<Image> getTestSet() {
+        if (testSet == null) {
+            testSet = getAllFiles().subList((int) (fullSet.size() * 0.95), fullSet.size());
+        }
+
+        return testSet;
     }
 
     public Image load(File file) {
@@ -56,11 +68,11 @@ public class ImageService {
                 .toList();
     }
 
-    private ImageService() {}
+    private ImageIOService() {}
 
-    private static final ImageService INSTANCE = new ImageService();
+    private static final ImageIOService INSTANCE = new ImageIOService();
 
-    public static ImageService getInstance() {
+    public static ImageIOService getInstance() {
         return INSTANCE;
     }
 }
